--- a/index.html
+++ b/index.html
@@ -173,14 +173,20 @@
     <!-- Blog Content -->
     <div class="body-content">
         <div class="blog-section">
+
+            <a href="https://bloghere00001-2-24-25-vedant-0001.programervedant.fun/" class="blog-post">
+                <div class="blog-title">The Future of Web Development</div>
+                <div class="blog-desc">Web development has come a long way from static HTML pages to dynamic, AI-powered websites. Every year, new trends reshape how we build and experience the web.
+
+                                 Whether you're a developer, business owner, or just a tech enthusiast,......................</div>
+            </a>
+
+            
             <a href="https://boldwriter.programervedant.fun" class="blog-post">
                 <div class="blog-title">EMPTY</div>
                 <div class="blog-desc">CLICK TO ADD.</div>
             </a>
-           <!-- <a href="https://example.com/blog2" class="blog-post">
-                <div class="blog-title">Top Blog 2</div>
-                <div class="blog-desc">A deep dive into this fascinating subject.</div>
-            </a>
+           <!-- 
 
         -->  <!-- Ad Banner -->
          <!--   <div class="ad-banner">
