--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
             </a>
 
             
-            <a href="https://boldwriter.programervedant.fun" class="blog-post">
-                <div class="blog-title">EMPTY</div>
-                <div class="blog-desc">CLICK TO ADD.</div>
+            <a href="https://bloghere00002-2-24-25-vedant-0001.programervedant.fun/" class="blog-post">
+                <div class="blog-title">India: The Best Country! But Why?</div>
+                <div class="blog-desc">India is more than just a country...........</div>
             </a>
            <!-- 
 
